# file-decomposer-agent-demo

./: RTL_Analysis_Report.md  analysis.md  ct_lsu_pfu_annotated.v  ct_lsu_pfu_annotated_complete.v  ct_lsu_pfu_optimized.v  ct_lsu_pfu_总结.md
file-decomposer-agent/: .env.example  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
file-decomposer-agent/examples/: demo_file_decomposition.py  simple_demo.py
file-decomposer-agent/src/file_decomposer_agent/: __init__.py  config.py  file_decomposer_agent.py  quickstart.py
